Fixing bug with no padding at the bottom of the page content area on mobile (https://trello.com/c/DwR7nJIz/7-evaluate-padding-at-the-bottom-of-html-text-areas)

--- a/static/src/components/taglist/_taglist.scss
+++ b/static/src/components/taglist/_taglist.scss
@@ -1,3 +1,7 @@
+.tag-list {
+  margin-bottom: rem(-11);
+}
+
 .tag-list-heading {
   @extend %label;
 }
@@ -6,6 +10,7 @@
   display: inline-block;
   &:not(:last-child) {
     margin-right: rem(11);
+    margin-bottom: rem(11);
     &.tag-list-heading {
       margin-right: rem(16);
     }
